# ChangeLog for dev-util/xdelta
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/xdelta/ChangeLog,v 1.7 2004/07/18 17:34:12 aliz Exp $

  18 Jul 2004; Daniel Ahlberg <aliz@gentoo.org> xdelta-1.1.3.ebuild:
  Added amd64 keyword, closing #56947.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 

*xdelta-1.1.3 (11 Apr 2002)
  11 Apr 2002; Spider <spider@gentoo.org>
  Update all glib dependencies to use glib-1.2*  in preparation of unmasking the glib-2.0.1 packages
    

*xdelta-1.1.3 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.