@@ -1,3 +1,3 @@
-MD5 60ad746cdf211da28be01d2bd92b525b xdelta-1.1.3.ebuild 752
-MD5 10c20f7f34cac037f177f84e959984a7 ChangeLog 1029
+MD5 5e339f35d872b81ab03dd8b566b4151a xdelta-1.1.3.ebuild 755
+MD5 8417e957a4bbca935833316bdb43fde3 ChangeLog 1151
 MD5 48768de74694023f8bd354f03b5ff52d files/digest-xdelta-1.1.3 64
