@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/xdelta
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/xdelta/ChangeLog,v 1.7 2004/07/18 17:34:12 aliz Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/xdelta/ChangeLog,v 1.8 2005/04/11 12:32:06 wolf31o2 Exp $
+
+  11 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> xdelta-1.1.3.ebuild:
+  Marking stable on amd64 for loki_patch.
 
   18 Jul 2004; Daniel Ahlberg <aliz@gentoo.org> xdelta-1.1.3.ebuild:
   Added amd64 keyword, closing #56947.
